--- a/flashcard-react/src/Slideshow.css
+++ b/flashcard-react/src/Slideshow.css
@@ -15,7 +15,7 @@
   min-height: 380px;
   width: 100%;
   border-radius: 10px;
-  background-color: bisque;
+  background-color: #e0b694;
 }
 
 /* Buttons */
